modules/gdscript/tests/scripts/analyzer/errors/access_level_private_var_subclass_using_self.gd
@private

class Foo:
    var a = 1

class Bar extends Foo:
    func bar():
        print(self.a)

func test():
    pass
